syntax="proto3";

package proto;
option go_package="./;proto";

import "mom_common.proto";

message MaterialSupplierInfo{
    string id=1;
    //代号
    string code=2;
    //描述
    string description=3;
    //备注
    string remark=4;
	//持有物料信息
	repeated AvailableMaterialInfo availableMaterials=5;
}

message AvailableMaterialInfo{
    string id=1;
    //物料供应商ID
    string materialSupplierID=2;
    //物料信息ID
    string materialInfoID=3;
}

message QueryMaterialSupplierRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
    // @inject_tag: uri:"identifier" form:"identifier"
    string identifier=4;
}

message QueryMaterialSupplierResponse{
    Code code=1;
    string message=2;
    repeated MaterialSupplierInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllMaterialSupplierResponse{
    Code code=1;
    string message=2;
    repeated MaterialSupplierInfo data=3;
}

message GetMaterialSupplierDetailResponse{
    Code code=1;
    string message=2;
    MaterialSupplierInfo data=3;
}